# Elysium

./: .gitignore  .gitmodules  Application.cpp  CMakeLists.txt  ClearColor_Test.h  Elysium.sln  README.md  README.txt  vengine.sln
Debug/res/: keep_directory.txt
Dependencies/Glad/: Glad.vcxproj
Dependencies/Glad/include/glad/: glad.h
Dependencies/Glad/src/: glad.c
Elysium/: CMakeLists.txt  Elysium.filters  Elysium.vcxproj
Elysium/dependencies/Glad/: CMakeLists.txt  Glad.vcxproj
Elysium/src/: Application.cpp  Elysium.h  Renderer.cpp  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Texture.cpp  Texture.h
Elysium/src/Elysium/: Application.cpp  Application.h  ArrayList.h  Camera.cpp  Camera.h  Editor.cpp  Editor.h  ImGuiUtility.cpp  ImGuiUtility.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Math.h  MathUtility.cpp  OrthographicCameraController.cpp  OrthographicCameraController.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystem2D.cpp  ParticleSystem2D.h  Random.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Scene.cpp  SceneManager.cpp  Texture.cpp  Timer.cpp  Timer.h  Utility.cpp  Utility.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.h  (+2 more)
Elysium/src/Elysium/AI/: AIUtility.cpp  AIUtility.h  Dense.cpp  Dense.h  HiddenLayer.cpp  HiddenLayer.h  Matrix.cpp  Model.cpp  Model.h  Perceptron.cpp  Perceptron.h  RLAgent.cpp  RLAgent.h  State.cpp  State.h  TabularRLAgent.cpp  TabularRLAgent.h
Elysium/src/Elysium/Event/: ApplicationEvent.h  KeyEvent.h
Elysium/src/Elysium/Events/: ApplicationEvent.h  Event.h  MouseEvent.h
Elysium/src/Elysium/Math/: Math.h
Elysium/src/Elysium/Network/: UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h  network_header.h
Elysium/src/Elysium/Physics/: DynamicObject.cpp  DynamicObject.h  PhysicalBody.cpp  PhysicalBody.h  PhysicalBody2D.cpp  PhysicalBody2D.h  PhysicalObject.cpp  PhysicalObject.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsSystem2D.cpp  PhysicsSystem2D.h  StaticObject.cpp  StaticObject.h
Elysium/src/Elysium/Renderer/: Assert.cpp  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  RenderUtility.cpp  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererUtility.cpp  RendererUtility.h  Shader.cpp  Shader.h  Shape.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
Elysium/src/test/: BatchRendering_Test.cpp  BatchRendering_Test.h  DynamicBatchRendering_Test.cpp  DynamicBatchRendering_Test.h  Sandbox.cpp  Sandbox.h
Export/Elysium/include/: Elysium.h
Export/Elysium/include/Elysium/: Application.h  ImGuiUtility.h  Math.h  OrthographicCameraController.h  ParticleSystem.h  ParticleSystem2D.h  Random.h  Scene.h  SceneManager.h  Timer.h  Utility.h  Window.h
Export/Elysium/include/Elysium/AI/: AIUtility.h  BinaryFeatureVector.h  Dense.h  HiddenLayer.h  LinearRLAgent.h  Matrix.h  Model.h  Perceptron.h  RLAgent.h  State.h
Export/Elysium/include/Elysium/Network/: network_header.h
Export/Elysium/res/shaders/: particles.glsl  vertex_primitive.glsl
Glad/: Glad.vcxproj
Release/res/shaders/: basic.shader  batch_rendering.shader
Sandbox/: PhysicsSystem_Logfile.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini  replace_imgui_ini.bat
Sandbox/res/AI/: DQN.txt  FlappyBirdWeightVector.rl  Modified-DQN.txt  Monte-Carlo.txt  TTTPolicy.rl  TTTStateVisits.rl  grid-dataset.csv  tictactoe-dataset.csv
Sandbox/res/AI/grid-model/: Dense0.wb  Dense1.wb  Dense2.wb
Sandbox/res/AI/iris-model/: Dense0.wb  Dense1.wb  Dense2.wb
Sandbox/res/AI/quadratic-model/: Dense0.wb  Dense1.wb  Dense2.wb
Sandbox/res/AI/tictactoe-model/: Dense0.wb  Dense1.wb  Dense2.wb
Sandbox/res/iris-model/: Dense0.wb  Dense1.wb  Dense2.wb
Sandbox/res/scenes/: Flappy.ely  Test.ely  Test.elysium
Sandbox/res/shaders/: basic.shader  particles.glsl
Sandbox/src/: Application.cpp  SandboxLayer.cpp  SandboxLayer.h  Scene.h  SceneManager.cpp  SceneManager.h
Sandbox/src/Game/: Adversary.cpp  Adversary.h  CellArea.cpp  CellArea.h  Connect4Grid.cpp  Connect4Grid.h  DummyPlayer.cpp  DummyPlayer.h  FlappyBird.cpp  FlappyBird.h  Ground.cpp  Ground.h  Player.cpp  Player.h  Systems.cpp  Systems.h  Tic-Tac-Toe.cpp  Tic-Tac-Toe.h  TicTacToeGrid.cpp  TicTacToeGrid.h  TicTacToeMinimax.cpp  TicTacToeMinimax.h  Values.h
Sandbox/src/Layers/: Connect4Layer.cpp  Connect4Layer.h  GameLayer.cpp  GameLayer.h  PerformanceLayer.cpp  PerformanceLayer.h  RLConnect4Layer.cpp  RLConnect4Layer.h  RLTTTLayer.cpp  RLTTTLayer.h  SandboxLayer.cpp  SandboxLayer.h  SoccerLayer.cpp  SoccerLayer.h  TestLayer.cpp  TestLayer.h
Sandbox/src/Scenes/: CellGrowthScene.cpp  CellGrowthScene.h  Connect4LScene.cpp  Connect4Scene.h  Editor.cpp  Editor.h  FlappyBirdScene.cpp  FlappyBirdScene.h  GridWorldScene.cpp  GridWorldScene.h  PerformanceScene.cpp  PerformanceScene.h  RLConnect4Scene.cpp  RLConnect4Scene.h  RLTTTScene.cpp  RLTTTScene.h  SandboxScene.cpp  SandboxScene.h  SoccerScene.cpp  SoccerScene.h  TestScene.cpp  TestScene.h  TicTacToeScene.cpp  TicTacToeScene.h
Sandbox/src/test/: BatchRendering_Test.cpp  BatchRendering_Test.h  ClearColor_Test.cpp  ClearColor_Test.h  DynamicBatchRendering_Test.cpp  DynamicBatchRendering_Test.h  Sandbox.cpp  Sandbox.h  ScreenSaver_Test.cpp  ScreenSaver_Test.h  Test.cpp  Test.h  Texture2D_Test.cpp  Texture2D_Test.h
vengine/: vengine.vcxproj  vengine.vcxproj.filters
vengine/res/shaders/: basic.shader  batch_rendering.shader
vengine/src/: Application.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Texture.cpp  Texture.h  Utility.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
vengine/src/test/: BatchRendering_Test.cpp  BatchRendering_Test.h  ClearColor_Test.cpp  ClearColor_Test.h  DynamicBatchRendering_Test.cpp  DynamicBatchRendering_Test.h  ScreenSaver_Test.cpp  ScreenSaver_Test.h  Test.cpp  Test.h  Texture2D_Test.cpp  Texture2D_Test.h
(+26 files in other folders)
